[package]
name = "fecr"
version = "0.0.6"
edition = "2024"
authors = [
    "Kenneth Alexander Jenkins <Kjenkins60@gatech.edu>",
    "Alan Daniel Aguilar <Aaguilar60@gatech.edu>",
]
description = "FerrumCrimper - A fast, Rust-powered CLI tool for efficient file management, compression, and archival with support for multiple formats and secure data handling."
readme = "README.md"
license-file = "LICENSE.txt"
homepage = "https://github.com/rockenman1234/FerrumCrimper"
keywords = [
    "file-compression",
    "cli-tools",
    "encryption",
    "files",
    "compression",
]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "encoding",
    "compression",
]

[[bin]]
name = "fecr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.94"
flate2 = { version = "1.1.1", features = ["zlib-rs"], default-features = false }
tar = "0.4"
walkdir = "2.5.0"
zip = "2.2.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
